force-app/main/default/objects/Project_Indicator_Service_Type__c/Project_Indicator_Service_Type__c.object-meta.xml
<CustomObject>
    <label>Project Indicator Service Type</label>
    <nameField>
        <displayFormat>PIST-{0000}</displayFormat>
        <label>Project Indicator Service Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Indicator Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>