force-app/main/default/objects/Project_Indicator_Service_Type__c/fields/Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Project_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent project indicator</description>
    <label>Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Project Indicator Service Types</relationshipLabel>
    <relationshipName>Project_Indicator_Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>