force-app/main/default/objects/Project_Indicator_Service_Type__c/fields/Project_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent project service type</description>
    <label>Project Service Type</label>
    <referenceTo>ampi__Project_Thematic_Area__c</referenceTo>
    <relationshipLabel>Project Indicator Service Types</relationshipLabel>
    <relationshipName>Project_Indicator_Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>